<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/color_f6"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView_auditfragment_arrowBack"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView_auditfragment_arrowBack"
            android:gravity="center"
            android:text="@string/audit"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_auditfragment_back"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@drawable/bg_selectstatus"
            android:gravity="center"
            android:text="返回登录页"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/textView_auditfragment_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="5dp"
        android:textSize="15sp"
        android:lines="4"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/imageview_auditfragment_examplepicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="center" />

    <RadioGroup
        android:id="@+id/radiogroup_auditfragment_judge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="5dp"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <RadioButton
            android:id="@+id/radioButton_auditfragment_yes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/yesbutton"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent" />
        <RadioButton
            android:id="@+id/radioButton_auditfragment_no"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/nobutton"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RadioGroup>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_f6" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <ImageView
            android:id="@+id/image6"
            android:layout_width="10dp"
            android:layout_alignParentLeft="true"
            android:layout_height="match_parent"
            android:background="@color/white" />


        <ImageView
            android:id="@+id/image4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_toRightOf="@+id/image6"
            android:layout_centerInParent="true"
            android:background="@drawable/bulb" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/image4"
            android:background="@color/white"
            android:padding="5dp"
            android:text="@string/pictureevidence"
            android:textColor="@color/orange"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_auditFragment_auditPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/textviewborder">

    </androidx.recyclerview.widget.RecyclerView>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_f6" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <ImageView
            android:id="@+id/image7"
            android:layout_width="10dp"
            android:layout_alignParentLeft="true"
            android:layout_height="match_parent"
            android:background="@color/white" />


        <ImageView
            android:id="@+id/image8"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_toRightOf="@+id/image7"
            android:layout_centerInParent="true"
            android:background="@drawable/bulb" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/image8"
            android:background="@color/white"
            android:padding="5dp"
            android:text="@string/auditfind"
            android:textColor="@color/orange"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <EditText
        android:id="@+id/audit_fragment_find"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:background="@drawable/textviewborder"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:gravity="left"
        android:textColor="@color/black"
        android:textSize="13sp" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_f6" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">


        <ImageView
            android:id="@+id/image5"
            android:layout_width="10dp"
            android:layout_alignParentLeft="true"
            android:layout_height="match_parent"
            android:background="@color/white" />


        <ImageButton
            android:id="@+id/imageButton_auditfragment_save"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@+id/image5"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:background="@drawable/finishbefore" />

        <TextView
            android:id="@+id/textview_auditfragment_proceed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/imageview_auditfragment_proceedpicture"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/textview_auditfragment_proceed"
            android:background="@drawable/proceedpicture"/>

        <ImageView
            android:id="@+id/image1"
            android:layout_width="7dp"
            android:layout_toLeftOf="@+id/imageview_auditfragment_proceedpicture"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/textview_auditfragment_nonumber"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/image1"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/imageview_auditfragment_nopicture"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/textview_auditfragment_nonumber"
            android:background="@drawable/nostatus"/>


        <ImageView
            android:id="@+id/image2"
            android:layout_width="7dp"
            android:layout_toLeftOf="@+id/imageview_auditfragment_nopicture"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/textview_auditfragment_yesnumber"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/image2"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/imageview_auditfragment_yespicture"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/textview_auditfragment_yesnumber"
            android:background="@drawable/yesstatus"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <Button
        android:id="@+id/button_auditfragment_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="退出程序"/>

</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
